--- a/Rural-web/src/main/webapp/index.xhtml
+++ b/Rural-web/src/main/webapp/index.xhtml
@@ -41,7 +41,8 @@
                                 </tr>
                                 <tr>
                                     <td colspan="2" style="text-align: center">
-                                        <p:commandButton value="Entrar"/>
+                                        <p:commandButton value="Entrar"
+                                                         action="#{acessoManagedBean.logar()}"/>
                                     </td>
                                 </tr>
                             </table>
