--- a/Rural-web/src/main/webapp/admin/configuracao/cadastros/cliente/index.xhtml
+++ b/Rural-web/src/main/webapp/admin/configuracao/cadastros/cliente/index.xhtml
@@ -26,19 +26,29 @@
                          resizableColumns="true"
                          liveResize="true"
                          rowsPerPageTemplate="25,50,100"
-                         rowsPerPageLabel="Registros por Página"
                          currentPageReportTemplate="Exibindo: {startRecord}-{endRecord} de {totalRecords} Registros"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          paginatorPosition="bottom"
-                         value="#{ClienteCrudMB.clientes}" 
+                         value="#{ClienteCrudMB.lazyDataModel}" 
                          widgetVar="dataTableVar" 
+                         filterEvent="enter"
                          emptyMessage="Nenhum registro encontrado"
+                         filteredValue="#{ClienteCrudMB.clientes}"
                          sortBy="id">
 
                 <f:facet name="header">
-                   
-                    <h:commandButton action="form?faces-redirect=true"
-                                     value="Novo" />
+
+                    <p:commandButton id="toggler" 
+                                     type="button" 
+                                     value="Columns" 
+                                     style="float:right" 
+                                     icon="ui-icon-calculator" />
+                    <p:columnToggler datasource="dataTable" trigger="toggler" />
+
+                    <p:outputPanel>
+                        <h:outputText value="Filtro:" />
+                        <p:inputText id="globalFilter" onkeyup="PF('dataTableVar').filter()" style="width:150px" placeholder="Pesquise"/>
+                    </p:outputPanel>
                 </f:facet>
 
                 <p:column id="idCliente" 
