--- a/Rural-web/src/main/webapp/admin/configuracao/cadastros/cliente/index.xhtml
+++ b/Rural-web/src/main/webapp/admin/configuracao/cadastros/cliente/index.xhtml
@@ -17,51 +17,46 @@
 
             <h:messages/>
 
-            <p:dataTable id="dataTable" 
-                         var="item" 
-                         lazy="true"
+
+
+            <p:dataTable id="dataTable"
+                         var="item"  
                          rows="25" 
                          paginator="true"
                          pageLinks="5" 
-                         resizableColumns="true"
-                         liveResize="true"
                          rowsPerPageTemplate="25,50,100"
                          currentPageReportTemplate="Exibindo: {startRecord}-{endRecord} de {totalRecords} Registros"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          paginatorPosition="bottom"
                          value="#{ClienteCrudMB.lazyDataModel}" 
-                         widgetVar="dataTableVar" 
-                         filterEvent="enter"
+                         widgetVar="dataTableVar"
                          emptyMessage="Nenhum registro encontrado"
-                         filteredValue="#{ClienteCrudMB.clientes}"
-                         sortBy="id">
+                         lazy="true">
 
                 <f:facet name="header">
-
-                    <p:commandButton id="toggler" 
-                                     type="button" 
-                                     value="Columns" 
-                                     style="float:right" 
-                                     icon="ui-icon-calculator" />
-                    <p:columnToggler datasource="dataTable" trigger="toggler" />
-
-                    <p:outputPanel>
-                        <h:outputText value="Filtro:" />
-                        <p:inputText id="globalFilter" onkeyup="PF('dataTableVar').filter()" style="width:150px" placeholder="Pesquise"/>
-                    </p:outputPanel>
+                    <h:commandButton action="form?faces-redirect=true"
+                                     value="Novo" />
                 </f:facet>
 
                 <p:column id="idCliente" 
+                          width="100"
+                          exportable="true"
+                          sortBy="#{item.id}"
+                          filterBy="#{item.id}"
                           headerText="Id">
                     <h:outputText value="#{item.id}" />
                 </p:column>
 
                 <p:column id="nomeCliente" 
+                          filterBy="#{item.nome}"
+                          exportable="true"
+                          sortBy="#{item.nome}"
                           headerText="Nome">
                     <h:outputText value="#{item.nome}" />
                 </p:column>
 
                 <p:column id="acoes"
+                          width="100"
                           headerText="Ações">
                     <p:commandButton icon="fa fa-pencil"
                                      styleClass="bt-acoes" 
@@ -82,6 +77,8 @@
                     </p:commandButton>
                 </p:column>
             </p:dataTable>
+
+
 
             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
                 <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
